# dark-sorter

./: LICENSE  README.md  pyproject.toml
dark_sorter/: __init__.py  __main__.py  reader.py  writer.py
darksorter/: __main__.py  reader.py  writer.py
tests/: test_read_fits.py  test_writer.py
