[tool.poetry]
name = "darksorter"
version = "0.1.2"
description = "Astrophotography Dark Frame Sorter"
authors = ["Milhan Kim"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astropy = "<6"
typer = {extras = ["all"], version = "<1"}
python-dateutil = "<3"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
darksorter = 'darksorter.__main__:entrypoint'
